--- a/Bunny Neon Ball 2.csproj
+++ b/Bunny Neon Ball 2.csproj
@@ -52,6 +52,9 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Advertisements">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -67,6 +70,9 @@
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Purchasing">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
     </Reference>
@@ -75,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ControlSchemePanelManager.cs" />
     <Compile Include="Assets\PostProcessing-master\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
     <Compile Include="Assets\PostProcessing-master\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
     <Compile Include="Assets\PostProcessing-master\PostProcessing\Runtime\Attributes\TrackballAttribute.cs" />
@@ -135,6 +142,8 @@
     <Compile Include="Assets\Scripts\Power System\Powers\Ranged Attack\RangedAttackBeamPowerCreator.cs" />
     <Compile Include="Assets\Scripts\Power System\Powers\Ranged Attack\RangedAttackPower.cs" />
     <Compile Include="Assets\Scripts\Power System\Powers\Ranged Attack\RangedAttackProjectilePower.cs" />
+    <Compile Include="Assets\Scripts\Power System\Powers\Teleport\TeleportPower.cs" />
+    <Compile Include="Assets\Scripts\Power System\Powers\Teleport\TeleportPowerController.cs" />
     <Compile Include="Assets\Scripts\Power System\UI\AddNewPowerPanelManager.cs" />
     <Compile Include="Assets\Scripts\Power System\UI\CharacterPanelManager.cs" />
     <Compile Include="Assets\Scripts\Power System\UI\EffectClassListPanelManager.cs" />
